snapshots/syntax/library/functions/datetime/datevalue/datevalue_with_trim.snap
---
source: src/syntax/library/functions/datetime/datevalue.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: cleanDate
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: DateValue
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: Trim
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: InputKeyword
                                      text: input
                        - kind: RightParenthesis
                          text: )
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
